--- a/Gondwana/templates/order/index.html
+++ b/Gondwana/templates/order/index.html
@@ -155,7 +155,18 @@
                 <!-- Tracking NO. end -->
 
                 <!-- Express -->
-                <td>{{ order.shipping_method }}</td>
+                <td>
+                    <div class="btn-group">
+                        <button class="btn btn-secondary btn-sm dropdown-toggle" id="order_shipping_method_{{ order.id }}" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" value="{{ order.shipping_method }}">
+                            {{ order.shipping_method }}
+                        </button>
+                        <div class="dropdown-menu">
+                            {% for shipping_method in get_all_shipping_methods() %}
+                            <button class="orderShippingMethodDropdownOptions dropdown-item" for="order_shipping_method_{{ order.id }}" type="button" value="{{ order.id }}" new_shipping_method="{{ shipping_method }}">{{ shipping_method }}</button>
+                            {% endfor %}
+                        </div>
+                    </div>
+                </td>
                 <!-- Express end -->
 
                 <!-- Tracking Info -->
@@ -386,6 +397,22 @@ $('#orderDownloadBatching').on("click",function(){
     } else {
         alert('Order can only be downloaded which is Awaiting Fullfillment status');
     }
+});
+
+// order express (shipping method) dropdown
+$('.orderShippingMethodDropdownOptions').on("click", function(){
+    var order_id = $(this).val();
+    var order_new_shipping_method = $(this).attr('new_shipping_method');
+    var title_element = $('#' + $(this).attr('for'));
+
+    var data = {};
+    data['key'] = "shipping_method";
+    data['value'] = order_new_shipping_method;
+
+    $.post('/api/order/update/attr/'+order_id, data=data, function(r) {
+        title_element.text(order_new_shipping_method);
+        title_element.val(order_new_shipping_method);
+    });
 });
 
 // open order detail
