Add setting template

--- a/Gondwana/templates/base.html
+++ b/Gondwana/templates/base.html
@@ -16,6 +16,7 @@
     ('/', 'dashboard', 'Dashboard'),
     ('/order/index', 'order', 'Order'),
     ('/channel/index', 'channel', 'Channel'),
+    ('/setting/index', 'setting', 'Setting'),
 ] %}
 {% set active_page = active_page|default('dashboard') %}
 
