--- a/Gondwana/static/main.css
+++ b/Gondwana/static/main.css
@@ -12,3 +12,21 @@
     border-bottom: 1px solid #cccccc;
     font-size: 3rem;
 }
+
+.block {
+    margin-top: 3rem;
+    width: 90%;
+}
+
+.block-header {
+    background-color: #eeffff;
+    border-bottom: 2px solid #eeeeee;
+    padding-left: 1rem;
+    font-size: 2rem;
+}
+
+.block-content {
+    padding-top: 1rem;
+    padding-left: 3rem;
+    font-size: 1.5rem;
+}
