--- a/Gondwana/templates/base.html
+++ b/Gondwana/templates/base.html
@@ -16,7 +16,7 @@
     ('/', 'dashboard', 'Dashboard'),
     ('/order/index', 'order', 'Order'),
     ('/channel/index', 'channel', 'Channel'),
-    ('/setting/index', 'setting', 'Setting'),
+    ('/settings/index', 'settings', 'Settings'),
 ] %}
 {% set active_page = active_page|default('dashboard') %}
 
