clear setting page

--- a/Gondwana/static/main.css
+++ b/Gondwana/static/main.css
@@ -24,8 +24,7 @@
     font-size: 2rem;
 }
 
-.block-content {
+.block-body {
     padding-top: 1rem;
     padding-left: 3rem;
-    font-size: 1.5rem;
 }
