--- a/Gondwana/templates/settings/index.html
+++ b/Gondwana/templates/settings/index.html
@@ -16,10 +16,10 @@
 {% block content %}
 <div class="block">
     <div class="block-header">
-        Email Settings
+        Settings title
     </div>
-    <div class="block-content">
-        hello
+    <div class="block-body">
+        Setting content
     </div>
 </div>
 {% endblock %}
